--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "export": "next export"
   },
   "dependencies": {
+    "@next/font": "^13.1.6",
     "cypress": "^10.0.3",
     "gsap": "^3.11.4",
-    "next": "^12.1.5",
+    "next": "^13.1.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "sass": "^1.57.1"
+    "@types/react": "18.0.27",
+    "sass": "^1.57.1",
+    "typescript": "4.9.5"
   }
 }
