--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gsap": "^3.11.4",
     "next": "^13.1.6",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@types/react": "18.0.27",
