--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "components/Navigation.js"  ],
+, "components/Navigation.tsx"  ],
   "exclude": [
     "node_modules"
   ]
