--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "export": "next export"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.8",
     "@next/font": "^13.1.6",
     "cypress": "^10.0.3",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.1.0",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.11.4",
+    "marked": "^4.2.12",
     "next": "^13.1.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
